// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-text brew-Button brew-Button--variant-standard brew-Button--color-primary brew-Button--size-medium"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    <div
      className="brew-Button__content"
    >
      <span
        className="MuiTypography-root brew-Typography brew-Typography--display-initial brew-Typography--variant-button brew-Typography--align-inherit brew-Button__text MuiTypography-button"
      >
        Foo
      </span>
    </div>
    <div
      className="brew-Button__loadingIndicator"
    >
      <div
        className="MuiCircularProgress-root brew-ProgressCircular--variant-indeterminate brew-ProgressCircular--color-primary brew-ProgressCircular--size-inherit MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
        role="progressbar"
        style={
          Object {
            "height": 40,
            "width": 40,
          }
        }
      >
        <svg
          className="MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
            cx={44}
            cy={44}
            fill="none"
            r={20}
            strokeWidth={4}
            style={Object {}}
          />
        </svg>
      </div>
    </div>
  </span>
</button>
`;

exports[`renders correctly with various props 1`] = `
Array [
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-text brew-Button brew-Button--variant-standard brew-Button--color-primary brew-Button--size-medium"
    disabled={false}
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      <div
        className="brew-Button__content"
      >
        <i
          className="brew-Icon material-icons brew-Icon--color-inherit"
        >
          arrow_back
        </i>
        <span
          className="MuiTypography-root brew-Typography brew-Typography--display-initial brew-Typography--variant-button brew-Typography--align-inherit brew-Button__text MuiTypography-button"
        >
          Go Back
        </span>
      </div>
      <div
        className="brew-Button__loadingIndicator"
      >
        <div
          className="MuiCircularProgress-root brew-ProgressCircular--variant-indeterminate brew-ProgressCircular--color-primary brew-ProgressCircular--size-inherit MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
          role="progressbar"
          style={
            Object {
              "height": 40,
              "width": 40,
            }
          }
        >
          <svg
            className="MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
              cx={44}
              cy={44}
              fill="none"
              r={20}
              strokeWidth={4}
              style={Object {}}
            />
          </svg>
        </div>
      </div>
    </span>
    <span
      className="MuiTouchRipple-root"
    />
  </button>,
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-text brew-Button brew-Button--variant-standard brew-Button--color-primary brew-Button--size-medium"
    disabled={false}
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      <div
        className="brew-Button__content"
      >
        <span
          className="MuiTypography-root brew-Typography brew-Typography--display-initial brew-Typography--variant-button brew-Typography--align-inherit brew-Button__text MuiTypography-button"
        >
          Click me!
        </span>
      </div>
      <div
        className="brew-Button__loadingIndicator"
      >
        <div
          className="MuiCircularProgress-root brew-ProgressCircular--variant-indeterminate brew-ProgressCircular--color-primary brew-ProgressCircular--size-inherit MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
          role="progressbar"
          style={
            Object {
              "height": 40,
              "width": 40,
            }
          }
        >
          <svg
            className="MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
              cx={44}
              cy={44}
              fill="none"
              r={20}
              strokeWidth={4}
              style={Object {}}
            />
          </svg>
        </div>
      </div>
    </span>
    <span
      className="MuiTouchRipple-root"
    />
  </button>,
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-text brew-Button brew-Button--variant-text brew-Button--color-primary brew-Button--size-medium"
    disabled={false}
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      <div
        className="brew-Button__content"
      >
        <span
          className="MuiTypography-root brew-Typography brew-Typography--display-initial brew-Typography--variant-button brew-Typography--align-inherit brew-Button__text MuiTypography-button"
        >
          Click me!
        </span>
      </div>
      <div
        className="brew-Button__loadingIndicator"
      >
        <div
          className="MuiCircularProgress-root brew-ProgressCircular--variant-indeterminate brew-ProgressCircular--color-primary brew-ProgressCircular--size-inherit MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
          role="progressbar"
          style={
            Object {
              "height": 40,
              "width": 40,
            }
          }
        >
          <svg
            className="MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
              cx={44}
              cy={44}
              fill="none"
              r={20}
              strokeWidth={4}
              style={Object {}}
            />
          </svg>
        </div>
      </div>
    </span>
    <span
      className="MuiTouchRipple-root"
    />
  </button>,
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-text brew-Button brew-Button--variant-standard brew-Button--color-primary brew-Button--size-medium"
    disabled={false}
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      <div
        className="brew-Button__content"
      >
        <span
          className="MuiTypography-root brew-Typography brew-Typography--display-initial brew-Typography--variant-button brew-Typography--align-inherit brew-Button__text MuiTypography-button"
        >
          Add Account
        </span>
        <i
          className="brew-Icon material-icons brew-Icon--color-inherit"
        >
          add_circle_outline
        </i>
      </div>
      <div
        className="brew-Button__loadingIndicator"
      >
        <div
          className="MuiCircularProgress-root brew-ProgressCircular--variant-indeterminate brew-ProgressCircular--color-primary brew-ProgressCircular--size-inherit MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
          role="progressbar"
          style={
            Object {
              "height": 40,
              "width": 40,
            }
          }
        >
          <svg
            className="MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
              cx={44}
              cy={44}
              fill="none"
              r={20}
              strokeWidth={4}
              style={Object {}}
            />
          </svg>
        </div>
      </div>
    </span>
    <span
      className="MuiTouchRipple-root"
    />
  </button>,
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-text brew-Button brew-Button--variant-standard brew-Button--color-primary brew-Button--size-medium"
    disabled={false}
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      <div
        className="brew-Button__content"
      >
        <i
          className="brew-Icon material-icons brew-Icon--color-inherit"
        >
          add_circle_outline
        </i>
      </div>
      <div
        className="brew-Button__loadingIndicator"
      >
        <div
          className="MuiCircularProgress-root brew-ProgressCircular--variant-indeterminate brew-ProgressCircular--color-primary brew-ProgressCircular--size-inherit MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
          role="progressbar"
          style={
            Object {
              "height": 40,
              "width": 40,
            }
          }
        >
          <svg
            className="MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
              cx={44}
              cy={44}
              fill="none"
              r={20}
              strokeWidth={4}
              style={Object {}}
            />
          </svg>
        </div>
      </div>
    </span>
    <span
      className="MuiTouchRipple-root"
    />
  </button>,
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-text brew-Button brew-Button--variant-standard brew-Button--color-primary brew-Button--size-medium brew-Button--isLoading brew-Button--isDisabled Mui-disabled Mui-disabled"
    disabled={true}
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={-1}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      <div
        className="brew-Button__content"
      >
        <span
          className="MuiTypography-root brew-Typography brew-Typography--display-initial brew-Typography--variant-button brew-Typography--align-inherit brew-Button__text MuiTypography-button"
        >
          Click me!
        </span>
      </div>
      <div
        className="brew-Button__loadingIndicator"
      >
        <div
          className="MuiCircularProgress-root brew-ProgressCircular--variant-indeterminate brew-ProgressCircular--color-primary brew-ProgressCircular--size-inherit MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
          role="progressbar"
          style={
            Object {
              "height": 40,
              "width": 40,
            }
          }
        >
          <svg
            className="MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
              cx={44}
              cy={44}
              fill="none"
              r={20}
              strokeWidth={4}
              style={Object {}}
            />
          </svg>
        </div>
      </div>
    </span>
  </button>,
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-text brew-Button brew-Button--variant-standard brew-Button--color-primary brew-Button--size-medium brew-Button--isFluid"
    disabled={false}
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      <div
        className="brew-Button__content"
      >
        <span
          className="MuiTypography-root brew-Typography brew-Typography--display-initial brew-Typography--variant-button brew-Typography--align-inherit brew-Button__text MuiTypography-button"
        >
          Click me!
        </span>
      </div>
      <div
        className="brew-Button__loadingIndicator"
      >
        <div
          className="MuiCircularProgress-root brew-ProgressCircular--variant-indeterminate brew-ProgressCircular--color-primary brew-ProgressCircular--size-inherit MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
          role="progressbar"
          style={
            Object {
              "height": 40,
              "width": 40,
            }
          }
        >
          <svg
            className="MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
              cx={44}
              cy={44}
              fill="none"
              r={20}
              strokeWidth={4}
              style={Object {}}
            />
          </svg>
        </div>
      </div>
    </span>
    <span
      className="MuiTouchRipple-root"
    />
  </button>,
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-text brew-Button brew-Button--variant-standard brew-Button--color-primary brew-Button--size-medium brew-Button--isCompact"
    disabled={false}
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      <div
        className="brew-Button__content"
      >
        <span
          className="MuiTypography-root brew-Typography brew-Typography--display-initial brew-Typography--variant-button brew-Typography--align-inherit brew-Button__text MuiTypography-button"
        >
          Click me!
        </span>
      </div>
      <div
        className="brew-Button__loadingIndicator"
      >
        <div
          className="MuiCircularProgress-root brew-ProgressCircular--variant-indeterminate brew-ProgressCircular--color-primary brew-ProgressCircular--size-inherit MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
          role="progressbar"
          style={
            Object {
              "height": 40,
              "width": 40,
            }
          }
        >
          <svg
            className="MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
              cx={44}
              cy={44}
              fill="none"
              r={20}
              strokeWidth={4}
              style={Object {}}
            />
          </svg>
        </div>
      </div>
    </span>
    <span
      className="MuiTouchRipple-root"
    />
  </button>,
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-text brew-Button brew-Button--variant-standard brew-Button--color-primary brew-Button--size-medium brew-Button--isDisabled Mui-disabled Mui-disabled"
    disabled={true}
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={-1}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      <div
        className="brew-Button__content"
      >
        <span
          className="MuiTypography-root brew-Typography brew-Typography--display-initial brew-Typography--variant-button brew-Typography--align-inherit brew-Button__text MuiTypography-button"
        >
          Click me!
        </span>
      </div>
      <div
        className="brew-Button__loadingIndicator"
      >
        <div
          className="MuiCircularProgress-root brew-ProgressCircular--variant-indeterminate brew-ProgressCircular--color-primary brew-ProgressCircular--size-inherit MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
          role="progressbar"
          style={
            Object {
              "height": 40,
              "width": 40,
            }
          }
        >
          <svg
            className="MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
              cx={44}
              cy={44}
              fill="none"
              r={20}
              strokeWidth={4}
              style={Object {}}
            />
          </svg>
        </div>
      </div>
    </span>
  </button>,
]
`;
